Building starter template. Installed package smartBlog to enable blog module. Added JS plugins to gulp, Sass partials for plugins, and configuring Umbraco layout

--- a/mygelb/mygelb.csproj
+++ b/mygelb/mygelb.csproj
@@ -331,12 +331,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\app.min.css" />
+    <Content Include="css\jquery.mmenu.all.css" />
+    <Content Include="favicon.ico" />
+    <Content Include="fonts\slick.svg" />
     <Content Include="gulpfile.js" />
     <Content Include="js\base.js" />
     <Content Include="js\router.js" />
-    <Content Include="js\vendor\foundation.min.js" />
     <Content Include="js\vendor\jquery-2.2.3.min.js" />
-    <Content Include="js\vendor\jquery.mmenu.oncanvas.js" />
+    <Content Include="js\vendor\jquery.mmenu.all.min.js" />
     <Content Include="js\vendor\parallax.min.js" />
     <Content Include="js\vendor\slick.min.js" />
     <Content Include="packages.config" />
@@ -369,15 +371,28 @@
     <Content Include="Config\applications.config" />
     <Content Include="Config\404handlers.config" />
     <Content Include="package.json" />
+    <Content Include="fonts\slick.eot" />
+    <Content Include="fonts\slick.ttf" />
+    <Content Include="fonts\slick.woff" />
     <None Include="Properties\PublishProfiles\localhost.pubxml" />
     <Content Include="Views\_Layout.cshtml" />
     <Content Include="Views\Homepage.cshtml" />
-    <Content Include="Views\LandingPages.cshtml" />
     <Content Include="Views\Partials\mainNavigation.cshtml" />
     <Content Include="scss\app.scss" />
     <Content Include="scss\_homepage.scss" />
     <Content Include="scss\_global.scss" />
     <Content Include="scss\_settings.scss" />
+    <Content Include="scss\_mixins.scss" />
+    <Content Include="Views\About.cshtml" />
+    <Content Include="Views\BlogDetail.cshtml" />
+    <Content Include="Views\BlogOverview.cshtml" />
+    <Content Include="Views\Contact.cshtml" />
+    <Content Include="Views\Portfolio.cshtml" />
+    <Content Include="scss\_slick-theme.scss" />
+    <Content Include="scss\_slick.scss" />
+    <Content Include="Views\MacroPartials\Search Results.cshtml" />
+    <Content Include="Views\MacroPartials\Sitemap.cshtml" />
+    <Content Include="Views\Subpage.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -420,7 +435,7 @@
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Views\MacroPartials\" />
+    <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
