--- a/mygelb/Config/Dashboard.config
+++ b/mygelb/Config/Dashboard.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <dashBoard>
-
   <section alias="StartupSettingsDashboardSection">
     <areas>
       <area>settings</area>
@@ -11,7 +10,6 @@
       </control>
     </tab>
   </section>
-
   <section alias="StartupFormsDashboardSection">
     <areas>
       <area>forms</area>
@@ -22,7 +20,6 @@
       </control>
     </tab>
   </section>
-
   <section alias="StartupDeveloperDashboardSection">
     <areas>
       <area>developer</area>
@@ -43,7 +40,6 @@
       </control>
     </tab>
   </section>
-
   <section alias="StartupMediaDashboardSection">
     <areas>
       <area>media</area>
@@ -53,9 +49,7 @@
         views/dashboard/media/mediafolderbrowser.html
       </control>
     </tab>
-
   </section>
-
   <section alias="StartupDashboardSection">
     <access>
       <deny>translator</deny>
@@ -67,14 +61,11 @@
       <access>
         <grant>admin</grant>
       </access>
-
       <control showOnce="true" addPanel="true" panelCaption="">
         views/dashboard/default/startupdashboardintro.html
       </control>
-
     </tab>
   </section>
-
   <section alias="StartupMemberDashboardSection">
     <areas>
       <area>member</area>
@@ -85,7 +76,6 @@
       </control>
     </tab>
   </section>
-
   <section alias="UmbracoModelsBuilder">
     <areas>
       <area>developer</area>
@@ -96,5 +86,12 @@
       </control>
     </tab>
   </section>
-
+  <section alias="SmartBlog">
+    <areas>
+      <area>content</area>
+    </areas>
+    <tab caption="Smart Blog Management">
+      <control showOnce="false" addPanel="false" panelCaption="">/umbraco/dashboard/smartBlogManagement.ascx</control>
+    </tab>
+  </section>
 </dashBoard>
