Cleaned Project from experimental packages.

--- a/mygelb/Web.config
+++ b/mygelb/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<section name="urlrewritingnet" restartOnExternalChanges="true" requirePermission="false" type="UrlRewritingNet.Configuration.UrlRewriteSection, UrlRewritingNet.UrlRewriter" />
@@ -14,6 +14,12 @@
 			<section name="FileSystemProviders" type="Umbraco.Core.Configuration.FileSystemProvidersSection, Umbraco.Core" requirePermission="false" />
 			<section name="dashBoard" type="Umbraco.Core.Configuration.Dashboard.DashboardSection, Umbraco.Core" requirePermission="false" />
 		</sectionGroup>
+		<sectionGroup name="formulateConfiguration">
+			<section name="persistence" type="formulate.app.Configuration.PersistenceConfigSection, formulate.app" requirePermission="false"/>
+			<section name="templates" type="formulate.app.Configuration.TemplatesConfigSection, formulate.app" requirePermission="false"/>
+			<section name="submissions" type="formulate.app.Configuration.SubmissionsConfigSection, formulate.app" requirePermission="false"/>
+			<section name="emailWhitelist" type="formulate.app.Configuration.EmailsConfigSection, formulate.app" requirePermission="false"/>
+		</sectionGroup>
 	</configSections>
 
 	<umbracoConfiguration>
@@ -22,6 +28,12 @@
 		<FileSystemProviders configSource="config\FileSystemProviders.config" />
 		<dashBoard configSource="config\Dashboard.config" />
 	</umbracoConfiguration>
+	<formulateConfiguration>
+		<persistence configSource="config\Formulate\persistence.config"/>
+		<templates configSource="config\Formulate\templates.config"/>
+		<submissions configSource="config\Formulate\submissions.config"/>
+		<emailWhitelist configSource="config\Formulate\emailWhitelist.config"/>
+	</formulateConfiguration>
 
 	<urlrewritingnet configSource="config\UrlRewriting.config" />
 	<microsoft.scripting configSource="config\scripting.config" />
@@ -31,32 +43,25 @@
 	<log4net configSource="config\log4net.config" />
 
 	<appSettings>
-		<!--
-      Umbraco web.config configuration documentation can be found here:
-      http://our.umbraco.org/documentation/using-umbraco/config-files/#webconfig
-      -->
-		<add key="umbracoConfigurationStatus" value="7.4.3" />
-		<add key="umbracoReservedUrls" value="~/config/splashes/booting.aspx,~/install/default.aspx,~/config/splashes/noNodes.aspx,~/VSEnterpriseHelper.axd" />
-		<add key="umbracoReservedPaths" value="~/umbraco,~/install/" />
-		<add key="umbracoPath" value="~/umbraco" />
-		<add key="umbracoHideTopLevelNodeFromPath" value="true" />
-		<add key="umbracoUseDirectoryUrls" value="true" />
-		<add key="umbracoTimeOutInMinutes" value="20" />
-		<add key="umbracoDefaultUILanguage" value="en" />
-		<add key="umbracoUseSSL" value="false" />
-
-		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-		<add key="webpages:Enabled" value="false" />
-		<add key="enableSimpleMembership" value="false" />
-		<add key="autoFormsAuthentication" value="false" />
-
-		<add key="log4net.Config" value="config\log4net.config" />
-		<add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
-
-    <add key="Umbraco.ModelsBuilder.Enable" value="true" />
-    <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
-
-	</appSettings>
+  <add key="umbracoConfigurationStatus" value="7.4.3" />
+  <add key="umbracoReservedUrls" value="~/config/splashes/booting.aspx,~/install/default.aspx,~/config/splashes/noNodes.aspx,~/VSEnterpriseHelper.axd" />
+  <add key="umbracoReservedPaths" value="~/umbraco,~/install/" />
+  <add key="umbracoPath" value="~/umbraco" />
+  <add key="umbracoHideTopLevelNodeFromPath" value="true" />
+  <add key="umbracoUseDirectoryUrls" value="true" />
+  <add key="umbracoTimeOutInMinutes" value="20" />
+  <add key="umbracoDefaultUILanguage" value="en" />
+  <add key="umbracoUseSSL" value="false" />
+  <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  <add key="webpages:Enabled" value="false" />
+  <add key="enableSimpleMembership" value="false" />
+  <add key="autoFormsAuthentication" value="false" />
+  <add key="log4net.Config" value="config\log4net.config" />
+  <add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
+  <add key="Umbraco.ModelsBuilder.Enable" value="true" />
+  <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
+  <add key="Formulate:Version" value="0.2.4.0" />
+ </appSettings>
 	<connectionStrings>
 		<remove name="umbracoDbDSN" />
 		<add name="umbracoDbDSN" connectionString="server=DESKTOP-9J2LBJM;database=mygelb;user id=legym;password=Zer0Faction" providerName="System.Data.SqlClient" />
