--- a/mygelb/Config/Dashboard.config
+++ b/mygelb/Config/Dashboard.config
@@ -10,16 +10,6 @@
       </control>
     </tab>
   </section>
-  <section alias="StartupFormsDashboardSection">
-    <areas>
-      <area>forms</area>
-    </areas>
-    <tab caption="Install Umbraco Forms">
-      <control showOnce="true" addPanel="true" panelCaption="">
-        views/dashboard/forms/formsdashboardintro.html
-      </control>
-    </tab>
-  </section>
   <section alias="StartupDeveloperDashboardSection">
     <areas>
       <area>developer</area>
@@ -92,6 +82,16 @@
     </areas>
     <tab caption="Smart Blog Management">
       <control showOnce="false" addPanel="false" panelCaption="">/umbraco/dashboard/smartBlogManagement.ascx</control>
+    </tab>
+  </section>
+  <section alias="StartupFormsDashboardSection">
+    <areas>
+      <area>forms</area>
+    </areas>
+    <tab caption="Dashboard">
+      <control>/app_plugins/umbracoforms/backoffice/dashboards/licensing.html</control>
+      <control>/app_plugins/umbracoforms/backoffice/dashboards/yourforms.html</control>
+      <control>/app_plugins/umbracoforms/backoffice/dashboards/activity.html</control>
     </tab>
   </section>
 </dashBoard>
