Added Font Awesome. Updated Gulp with alert. Added mmenu and slickjs to package.json. Added _fonts.scss

--- a/mygelb/mygelb.csproj
+++ b/mygelb/mygelb.csproj
@@ -410,6 +410,7 @@
     <Content Include="Views\Partials\SmartSearch.cshtml" />
     <Content Include="Views\Partials\SmartShowComments.cshtml" />
     <Content Include="Views\Partials\SmartShowPost.cshtml" />
+    <Content Include="scss\_fonts.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
