--- a/mygelb/package.json
+++ b/mygelb/package.json
@@ -1,11 +1,14 @@
 {
   "name": "District404",
+  "version": "1.0.0",
   "main": "gulpfile.js",
   "dependencies": {
     "foundation-sites": "^6.2.1",
+    "font-awesome": "^4.6.1",
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "beepbeep": "^1.2.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
@@ -15,6 +18,8 @@
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "slick-carousel": "^1.6.0",
+    "jquery.mmenu": "^5.6.3"
   }
 }
