Added slideshow to homepage using nested content. Removed Nested content from umbraco package folder and installed through nuget.

--- a/mygelb/Web.config
+++ b/mygelb/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<section name="urlrewritingnet" restartOnExternalChanges="true" requirePermission="false" type="UrlRewritingNet.Configuration.UrlRewriteSection, UrlRewritingNet.UrlRewriter" />
@@ -15,10 +15,10 @@
 			<section name="dashBoard" type="Umbraco.Core.Configuration.Dashboard.DashboardSection, Umbraco.Core" requirePermission="false" />
 		</sectionGroup>
 		<sectionGroup name="formulateConfiguration">
-			<section name="persistence" type="formulate.app.Configuration.PersistenceConfigSection, formulate.app" requirePermission="false"/>
-			<section name="templates" type="formulate.app.Configuration.TemplatesConfigSection, formulate.app" requirePermission="false"/>
-			<section name="submissions" type="formulate.app.Configuration.SubmissionsConfigSection, formulate.app" requirePermission="false"/>
-			<section name="emailWhitelist" type="formulate.app.Configuration.EmailsConfigSection, formulate.app" requirePermission="false"/>
+			<section name="persistence" type="formulate.app.Configuration.PersistenceConfigSection, formulate.app" requirePermission="false" />
+			<section name="templates" type="formulate.app.Configuration.TemplatesConfigSection, formulate.app" requirePermission="false" />
+			<section name="submissions" type="formulate.app.Configuration.SubmissionsConfigSection, formulate.app" requirePermission="false" />
+			<section name="emailWhitelist" type="formulate.app.Configuration.EmailsConfigSection, formulate.app" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
 
@@ -29,10 +29,10 @@
 		<dashBoard configSource="config\Dashboard.config" />
 	</umbracoConfiguration>
 	<formulateConfiguration>
-		<persistence configSource="config\Formulate\persistence.config"/>
-		<templates configSource="config\Formulate\templates.config"/>
-		<submissions configSource="config\Formulate\submissions.config"/>
-		<emailWhitelist configSource="config\Formulate\emailWhitelist.config"/>
+		<persistence configSource="config\Formulate\persistence.config" />
+		<templates configSource="config\Formulate\templates.config" />
+		<submissions configSource="config\Formulate\submissions.config" />
+		<emailWhitelist configSource="config\Formulate\emailWhitelist.config" />
 	</formulateConfiguration>
 
 	<urlrewritingnet configSource="config\UrlRewriting.config" />
